src/tests/e2e/snapshots/vc_frame__tests__e2e__cases__watcher_client_functionality-2.snap
---
source: src/tests/e2e/cases.rs
expression: watcher_snapshot
---
        𝚅𝚒𝚋𝚎𝚌𝚛𝚊𝚏𝚝𝚎𝚍.    ⎮  ▷ N   ◉ Start here [ ]   ○ Shell                         ✍ Composer     · ❯_ Quick cmd       
SESSIONS 1 · watcher_cli┌ Start here — map of this workspace ──┤ MY FOCUS AND:   ├─────────────────────────────────────┐
 ● Live …               │                                                                                              │
01 ◉ watcher_client_func│                                                                                              │
                        │                                                                                              │
                        │                                                                                              │
                        │                                                                                              │
                        │                                                                                              │
                        │                                                                                              │
                        │                                                                                              │
                        │                                                                                              │
                        │                                                                                              │
                        │                                                                                              │
                        │                                                                                              │
                        │                                                                                              │
                        │                                                                                              │
                        │                                                                                              │
                        │                                                                                              │
                        │                                                                                              │
                        │                                                                                              │
                        │                                                                                              │
                        │                                                                                              │
 🅵… · 🆇… · 🅽…           └──────────────────────────────────────────────────────────────────────────────────────────────┘
 ⌃g  LOCK  ⌃p  PANE  ⌃t  TAB  ⌃n  RESIZE  ⌃h  MOVE  ⌃s  SEARCH  ⌃o  SESSION                    ...  BASE
